crates/keron-lang/tests/corpus/errors/check/nullable_used_as_t.keron
val maybe_name: String? = "alice"
val name: String = maybe_name
